--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodekb",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "node app"
   },
@@ -15,6 +15,7 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.15.3",
     "express-validator": "^3.2.0",
+    "mongodb": "^3.2.2",
     "mongoose": "^4.10.2",
     "nodemon": "^1.18.10",
     "passport": "^0.3.2",
